# Claude-Code-Usage-Metrics-Monitor

./: Cargo.toml
src/: aggregator.rs  alerts.rs  config.rs  heuristics.rs  main.rs  metric_registry.rs  parser.rs  settings.rs  storage.rs  tray.rs  types.rs  watcher.rs
src/ui/: behavior.rs  chains.rs  conversation.rs  cost.rs  mod.rs  projects.rs  sessions.rs  settings_modal.rs  summary.rs  timeline.rs  widgets.rs
