[package]
name = "claude-usage-card"
version = "0.1.0"
edition = "2021"
description = "Desktop widget showing Claude Code usage metrics in real-time"

[dependencies]
eframe = "0.31"
notify = "7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
