[package]
name = "claude-usage-card"
version = "0.1.0"
edition = "2021"
description = "Desktop widget showing Claude Code usage metrics in real-time"

[features]
default = ["tray"]
tray = ["tray-icon", "notify-rust"]

[dependencies]
eframe = "0.31.1"
notify = "7.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
dirs = "6.0.0"
rusqlite = { version = "0.32", features = ["bundled"] }
notify-rust = { version = "4.12.0", optional = true }
tray-icon = { version = "0.21", optional = true }
